# opengl-learning

./: .gitignore  CMakeLists.txt  Ctrl_F5.cpp  SimpleVertexShader.vertexshader  build.bat  opengltest.sln  readme.md  run.bat  setup.cpp
opengltest/: LoadShader.cpp  SimpleVertexShader.vertexshader  opengltest.cpp  opengltest.vcxproj  opengltest.vcxproj.filters  stdafx.cpp  stdafx.h
readme/: shader.md
